--- a/BreastCancerTraining.ipynb
+++ b/BreastCancerTraining.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNw+llYhnQ1sYgd1C3ngPQ3",
+      "authorship_tag": "ABX9TyOa7PkS3IBjPNlcVVvyWewK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -69,18 +69,27 @@
       "cell_type": "code",
       "source": [
         "data = pd.read_csv('data.csv')\n",
+        "print(\"\\n First 5 rows:\")\n",
         "data.head()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 273
+          "height": 308
         },
         "id": "axlJkYhdwdB1",
-        "outputId": "0d047b5a-d01a-4c56-b1e7-59b17773daad"
+        "outputId": "bb22f854-3c1a-4979-83d1-7657dc8644e9"
       },
-      "execution_count": 5,
+      "execution_count": 7,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            " First 5 rows:\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
@@ -124,7 +133,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-25082317-22b1-4567-b9b2-e81a6c3dea2e\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-94012547-dd2c-4190-889b-a2c6fa885bfc\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -294,7 +303,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-25082317-22b1-4567-b9b2-e81a6c3dea2e')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-94012547-dd2c-4190-889b-a2c6fa885bfc')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -346,12 +355,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-25082317-22b1-4567-b9b2-e81a6c3dea2e button.colab-df-convert');\n",
+              "        document.querySelector('#df-94012547-dd2c-4190-889b-a2c6fa885bfc button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-25082317-22b1-4567-b9b2-e81a6c3dea2e');\n",
+              "        const element = document.querySelector('#df-94012547-dd2c-4190-889b-a2c6fa885bfc');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -371,8 +380,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-fe46cb9a-f319-4135-bd66-8eac9094731d\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-fe46cb9a-f319-4135-bd66-8eac9094731d')\"\n",
+              "<div id=\"df-71c53098-f0f0-4b83-82a3-4b89e7bc3e27\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-71c53098-f0f0-4b83-82a3-4b89e7bc3e27')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -491,7 +500,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-fe46cb9a-f319-4135-bd66-8eac9094731d button');\n",
+              "        document.querySelector('#df-71c53098-f0f0-4b83-82a3-4b89e7bc3e27 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -507,13 +516,14 @@
             }
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 7
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "print(\"\\ndataset Basic information:\")\n",
         "print(data.info())\n"
       ],
       "metadata": {
@@ -521,14 +531,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "z9UE5tzjwoAP",
-        "outputId": "b15bdc99-ff3d-4c3e-cb68-55b0dcab85c8"
+        "outputId": "34c0b77e-215e-4dd9-a28d-e50654392428"
       },
-      "execution_count": 6,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "\n",
+            "dataset Basic information:\n",
             "<class 'pandas.core.frame.DataFrame'>\n",
             "RangeIndex: 569 entries, 0 to 568\n",
             "Data columns (total 33 columns):\n",
@@ -570,6 +582,93 @@
             "dtypes: float64(31), int64(1), object(1)\n",
             "memory usage: 146.8+ KB\n",
             "None\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Display basic statistics of the dataset\n",
+        "print(\"\\n dataset Basic statistics:\")\n",
+        "print(data.describe())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kLOapB64xNua",
+        "outputId": "2a5ebc07-b7ee-41cd-80b1-c6101f9f90f0"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            " dataset Basic statistics:\n",
+            "                 id  radius_mean  texture_mean  perimeter_mean    area_mean  \\\n",
+            "count  5.690000e+02   569.000000    569.000000      569.000000   569.000000   \n",
+            "mean   3.037183e+07    14.127292     19.289649       91.969033   654.889104   \n",
+            "std    1.250206e+08     3.524049      4.301036       24.298981   351.914129   \n",
+            "min    8.670000e+03     6.981000      9.710000       43.790000   143.500000   \n",
+            "25%    8.692180e+05    11.700000     16.170000       75.170000   420.300000   \n",
+            "50%    9.060240e+05    13.370000     18.840000       86.240000   551.100000   \n",
+            "75%    8.813129e+06    15.780000     21.800000      104.100000   782.700000   \n",
+            "max    9.113205e+08    28.110000     39.280000      188.500000  2501.000000   \n",
+            "\n",
+            "       smoothness_mean  compactness_mean  concavity_mean  concave points_mean  \\\n",
+            "count       569.000000        569.000000      569.000000           569.000000   \n",
+            "mean          0.096360          0.104341        0.088799             0.048919   \n",
+            "std           0.014064          0.052813        0.079720             0.038803   \n",
+            "min           0.052630          0.019380        0.000000             0.000000   \n",
+            "25%           0.086370          0.064920        0.029560             0.020310   \n",
+            "50%           0.095870          0.092630        0.061540             0.033500   \n",
+            "75%           0.105300          0.130400        0.130700             0.074000   \n",
+            "max           0.163400          0.345400        0.426800             0.201200   \n",
+            "\n",
+            "       symmetry_mean  ...  texture_worst  perimeter_worst   area_worst  \\\n",
+            "count     569.000000  ...     569.000000       569.000000   569.000000   \n",
+            "mean        0.181162  ...      25.677223       107.261213   880.583128   \n",
+            "std         0.027414  ...       6.146258        33.602542   569.356993   \n",
+            "min         0.106000  ...      12.020000        50.410000   185.200000   \n",
+            "25%         0.161900  ...      21.080000        84.110000   515.300000   \n",
+            "50%         0.179200  ...      25.410000        97.660000   686.500000   \n",
+            "75%         0.195700  ...      29.720000       125.400000  1084.000000   \n",
+            "max         0.304000  ...      49.540000       251.200000  4254.000000   \n",
+            "\n",
+            "       smoothness_worst  compactness_worst  concavity_worst  \\\n",
+            "count        569.000000         569.000000       569.000000   \n",
+            "mean           0.132369           0.254265         0.272188   \n",
+            "std            0.022832           0.157336         0.208624   \n",
+            "min            0.071170           0.027290         0.000000   \n",
+            "25%            0.116600           0.147200         0.114500   \n",
+            "50%            0.131300           0.211900         0.226700   \n",
+            "75%            0.146000           0.339100         0.382900   \n",
+            "max            0.222600           1.058000         1.252000   \n",
+            "\n",
+            "       concave points_worst  symmetry_worst  fractal_dimension_worst  \\\n",
+            "count            569.000000      569.000000               569.000000   \n",
+            "mean               0.114606        0.290076                 0.083946   \n",
+            "std                0.065732        0.061867                 0.018061   \n",
+            "min                0.000000        0.156500                 0.055040   \n",
+            "25%                0.064930        0.250400                 0.071460   \n",
+            "50%                0.099930        0.282200                 0.080040   \n",
+            "75%                0.161400        0.317900                 0.092080   \n",
+            "max                0.291000        0.663800                 0.207500   \n",
+            "\n",
+            "       Unnamed: 32  \n",
+            "count          0.0  \n",
+            "mean           NaN  \n",
+            "std            NaN  \n",
+            "min            NaN  \n",
+            "25%            NaN  \n",
+            "50%            NaN  \n",
+            "75%            NaN  \n",
+            "max            NaN  \n",
+            "\n",
+            "[8 rows x 32 columns]\n"
           ]
         }
       ]
